improve submussion REST design
